[gd_scene load_steps=51 format=3 uid="uid://vlljtgyhlwf1"]

[ext_resource type="Texture2D" uid="uid://b0phkd8ptyphb" path="res://arts/dad idle/Old_man_Josh_idle_anim_48x48.png" id="1_4shoc"]
[ext_resource type="Script" path="res://scripts/dad.gd" id="1_yj4np"]
[ext_resource type="Texture2D" uid="uid://bmoi5yw8nynag" path="res://arts/dad run/Old_man_Josh_run_48x48.png" id="2_2ib7f"]
[ext_resource type="Texture2D" uid="uid://tkc0nnwc2ff8" path="res://arts/ui_elements/UI_48x48.png" id="4_un1xy"]

[sub_resource type="AtlasTexture" id="AtlasTexture_xmdes"]
atlas = ExtResource("1_4shoc")
region = Rect2(864, 0, 48, 96)

[sub_resource type="AtlasTexture" id="AtlasTexture_ftte5"]
atlas = ExtResource("1_4shoc")
region = Rect2(912, 0, 48, 96)

[sub_resource type="AtlasTexture" id="AtlasTexture_2ewgg"]
atlas = ExtResource("1_4shoc")
region = Rect2(960, 0, 48, 96)

[sub_resource type="AtlasTexture" id="AtlasTexture_a6bo0"]
atlas = ExtResource("1_4shoc")
region = Rect2(1008, 0, 48, 96)

[sub_resource type="AtlasTexture" id="AtlasTexture_mcluw"]
atlas = ExtResource("1_4shoc")
region = Rect2(1056, 0, 48, 96)

[sub_resource type="AtlasTexture" id="AtlasTexture_dow33"]
atlas = ExtResource("1_4shoc")
region = Rect2(1104, 0, 48, 96)

[sub_resource type="AtlasTexture" id="AtlasTexture_w4tkt"]
atlas = ExtResource("1_4shoc")
region = Rect2(288, 0, 48, 96)

[sub_resource type="AtlasTexture" id="AtlasTexture_pdp4i"]
atlas = ExtResource("1_4shoc")
region = Rect2(336, 0, 48, 96)

[sub_resource type="AtlasTexture" id="AtlasTexture_oopq4"]
atlas = ExtResource("1_4shoc")
region = Rect2(384, 0, 48, 96)

[sub_resource type="AtlasTexture" id="AtlasTexture_xq6wj"]
atlas = ExtResource("1_4shoc")
region = Rect2(432, 0, 48, 96)

[sub_resource type="AtlasTexture" id="AtlasTexture_k6nk4"]
atlas = ExtResource("1_4shoc")
region = Rect2(480, 0, 48, 96)

[sub_resource type="AtlasTexture" id="AtlasTexture_34rna"]
atlas = ExtResource("1_4shoc")
region = Rect2(528, 0, 48, 96)

[sub_resource type="AtlasTexture" id="AtlasTexture_njlfo"]
atlas = ExtResource("1_4shoc")
region = Rect2(576, 0, 48, 96)

[sub_resource type="AtlasTexture" id="AtlasTexture_82gta"]
atlas = ExtResource("1_4shoc")
region = Rect2(624, 0, 48, 96)

[sub_resource type="AtlasTexture" id="AtlasTexture_mu2en"]
atlas = ExtResource("1_4shoc")
region = Rect2(672, 0, 48, 96)

[sub_resource type="AtlasTexture" id="AtlasTexture_sqwff"]
atlas = ExtResource("1_4shoc")
region = Rect2(720, 0, 48, 96)

[sub_resource type="AtlasTexture" id="AtlasTexture_pxvwo"]
atlas = ExtResource("1_4shoc")
region = Rect2(768, 0, 48, 96)

[sub_resource type="AtlasTexture" id="AtlasTexture_phr4k"]
atlas = ExtResource("1_4shoc")
region = Rect2(816, 0, 48, 96)

[sub_resource type="AtlasTexture" id="AtlasTexture_4bs3y"]
atlas = ExtResource("2_2ib7f")
region = Rect2(864, 0, 48, 96)

[sub_resource type="AtlasTexture" id="AtlasTexture_xx84w"]
atlas = ExtResource("2_2ib7f")
region = Rect2(912, 0, 48, 96)

[sub_resource type="AtlasTexture" id="AtlasTexture_ujg2g"]
atlas = ExtResource("2_2ib7f")
region = Rect2(960, 0, 48, 96)

[sub_resource type="AtlasTexture" id="AtlasTexture_xvcg6"]
atlas = ExtResource("2_2ib7f")
region = Rect2(1008, 0, 48, 96)

[sub_resource type="AtlasTexture" id="AtlasTexture_dnas4"]
atlas = ExtResource("2_2ib7f")
region = Rect2(1056, 0, 48, 96)

[sub_resource type="AtlasTexture" id="AtlasTexture_r4cip"]
atlas = ExtResource("2_2ib7f")
region = Rect2(1104, 0, 48, 96)

[sub_resource type="AtlasTexture" id="AtlasTexture_kylle"]
atlas = ExtResource("2_2ib7f")
region = Rect2(96, 0, 48, 96)

[sub_resource type="AtlasTexture" id="AtlasTexture_3au2y"]
atlas = ExtResource("2_2ib7f")
region = Rect2(144, 0, 48, 96)

[sub_resource type="AtlasTexture" id="AtlasTexture_p282v"]
atlas = ExtResource("2_2ib7f")
region = Rect2(192, 0, 48, 96)

[sub_resource type="AtlasTexture" id="AtlasTexture_mttt3"]
atlas = ExtResource("2_2ib7f")
region = Rect2(240, 0, 48, 96)

[sub_resource type="AtlasTexture" id="AtlasTexture_kyw5b"]
atlas = ExtResource("2_2ib7f")
region = Rect2(288, 0, 48, 96)

[sub_resource type="AtlasTexture" id="AtlasTexture_ox1h7"]
atlas = ExtResource("2_2ib7f")
region = Rect2(336, 0, 48, 96)

[sub_resource type="AtlasTexture" id="AtlasTexture_k5oiv"]
atlas = ExtResource("2_2ib7f")
region = Rect2(384, 0, 48, 96)

[sub_resource type="AtlasTexture" id="AtlasTexture_lrwui"]
atlas = ExtResource("2_2ib7f")
region = Rect2(432, 0, 48, 96)

[sub_resource type="AtlasTexture" id="AtlasTexture_mpb6l"]
atlas = ExtResource("2_2ib7f")
region = Rect2(480, 0, 48, 96)

[sub_resource type="AtlasTexture" id="AtlasTexture_e4xrd"]
atlas = ExtResource("2_2ib7f")
region = Rect2(528, 0, 48, 96)

[sub_resource type="SpriteFrames" id="SpriteFrames_a8fln"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_xmdes")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ftte5")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_2ewgg")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_a6bo0")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_mcluw")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_dow33")
}],
"loop": true,
"name": &"idle_down",
"speed": 9.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_w4tkt")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_pdp4i")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_oopq4")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_xq6wj")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_k6nk4")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_34rna")
}],
"loop": true,
"name": &"idle_right",
"speed": 9.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_njlfo")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_82gta")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_mu2en")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_sqwff")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_pxvwo")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_phr4k")
}],
"loop": true,
"name": &"idle_up",
"speed": 9.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_4bs3y")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_xx84w")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ujg2g")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_xvcg6")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_dnas4")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_r4cip")
}],
"loop": true,
"name": &"run_down",
"speed": 9.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_kylle")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_3au2y")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_p282v")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_mttt3")
}],
"loop": true,
"name": &"run_right",
"speed": 9.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_kyw5b")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ox1h7")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_k5oiv")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_lrwui")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_mpb6l")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_e4xrd")
}],
"loop": true,
"name": &"run_up",
"speed": 9.0
}]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_t2rci"]
size = Vector2(16, 17.6665)

[sub_resource type="AtlasTexture" id="AtlasTexture_bt7y2"]
atlas = ExtResource("4_un1xy")
region = Rect2(0, 595, 48, 85)

[sub_resource type="AtlasTexture" id="AtlasTexture_y28dr"]
atlas = ExtResource("4_un1xy")
region = Rect2(48, 595, 48, 85)

[sub_resource type="AtlasTexture" id="AtlasTexture_ud8nt"]
atlas = ExtResource("4_un1xy")
region = Rect2(96, 595, 48, 85)

[sub_resource type="AtlasTexture" id="AtlasTexture_6hhba"]
atlas = ExtResource("4_un1xy")
region = Rect2(144, 595, 48, 85)

[sub_resource type="AtlasTexture" id="AtlasTexture_n47lb"]
atlas = ExtResource("4_un1xy")
region = Rect2(192, 595, 48, 85)

[sub_resource type="AtlasTexture" id="AtlasTexture_mc4in"]
atlas = ExtResource("4_un1xy")
region = Rect2(240, 595, 48, 85)

[sub_resource type="AtlasTexture" id="AtlasTexture_4p2n2"]
atlas = ExtResource("4_un1xy")
region = Rect2(288, 595, 48, 85)

[sub_resource type="AtlasTexture" id="AtlasTexture_cqcxn"]
atlas = ExtResource("4_un1xy")
region = Rect2(336, 595, 48, 85)

[sub_resource type="SpriteFrames" id="SpriteFrames_qvl3u"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_bt7y2")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_y28dr")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ud8nt")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_6hhba")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_n47lb")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_mc4in")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_4p2n2")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_cqcxn")
}],
"loop": true,
"name": &"default",
"speed": 9.0
}]

[sub_resource type="LabelSettings" id="LabelSettings_frfdl"]
font_size = 30
font_color = Color(0.682353, 1, 1, 1)
outline_size = 7
outline_color = Color(0, 0, 0, 1)

[node name="Dad" type="CharacterBody2D" groups=["NPC"]]
z_as_relative = false
collision_layer = 2
script = ExtResource("1_yj4np")

[node name="AnimatedSprite2D2" type="AnimatedSprite2D" parent="."]
z_index = 2
z_as_relative = false
y_sort_enabled = true
position = Vector2(0, -40)
sprite_frames = SubResource("SpriteFrames_a8fln")
animation = &"run_up"
frame_progress = 0.05219

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
z_as_relative = false
shape = SubResource("RectangleShape2D_t2rci")

[node name="NavigationAgent2D" type="NavigationAgent2D" parent="."]
path_desired_distance = 6.0
target_desired_distance = 6.0

[node name="HTTPRequest" type="HTTPRequest" parent="."]

[node name="ActionTimer" type="Timer" parent="."]
wait_time = 50.0
autostart = true

[node name="Thinking" type="AnimatedSprite2D" parent="."]
z_index = 10
z_as_relative = false
y_sort_enabled = true
position = Vector2(24, -72)
sprite_frames = SubResource("SpriteFrames_qvl3u")
frame_progress = 0.949098

[node name="ThinkingControl" type="Control" parent="."]
layout_mode = 3
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0
scale = Vector2(0.5, 0.5)

[node name="ThinkingLabel" type="Label" parent="ThinkingControl"]
z_index = 10
y_sort_enabled = true
layout_mode = 0
offset_left = -64.0
offset_top = -160.0
offset_right = 80.0
offset_bottom = -112.0
text = "Thinking"
label_settings = SubResource("LabelSettings_frfdl")

[connection signal="request_completed" from="HTTPRequest" to="." method="_on_http_request_request_completed"]
[connection signal="timeout" from="ActionTimer" to="." method="_on_action_timer_timeout"]
